changed ui for goodnight mode, made chat history saved

--- a/client/index.html
+++ b/client/index.html
@@ -9,8 +9,8 @@
 <body>
   <div class="app-container">
     <header>
-      <h1>🌸 PoppyNest</h1>
-      <p>Your cozy bedtime companion</p>
+      <h1>🌸 PoppyNest 🌸</h1>
+      <p>Your cozy bedtime companion🧸</p>
     </header>
 
     <main class="chat-container">
@@ -19,7 +19,7 @@
       <form id="chat-form">
         <input type="text" id="user-input" placeholder="Share your thoughts..." required />
         <button type="submit">Send</button>
-        <button class="goodnight-btn" onclick="sayGoodnight()">🌙 Goodnight Mode</button>
+        <button id="goodnight-toggle" class="goodnight-btn" onclick="toggleGoodnightMode()">🌙 Goodnight Mode</button>
       </form>
     </main>
 
