--- a/client/dreams.html
+++ b/client/dreams.html
@@ -10,7 +10,7 @@
   <div class="app-container">
     <header>
       <h1>💤 Dream Log</h1>
-      <p>Capture your dreams</p>
+      <p>If you don't write your dreams down you'll forget them 😔</p>
     </header>
 
     <main class="dream-container">
@@ -25,6 +25,17 @@
       </div>
     </main>
 
+    <!-- Custom Delete Confirmation Modal -->
+    <div id="delete-modal" class="delete-modal" style="display:none;">
+      <div class="delete-modal-content">
+        <p id="delete-modal-text">Are you sure you want to delete this dream?</p>
+        <div class="delete-modal-actions">
+          <button id="confirm-delete-btn" class="delete-confirm-btn">Delete</button>
+          <button id="cancel-delete-btn" class="delete-cancel-btn">Cancel</button>
+        </div>
+      </div>
+    </div>
+
     <nav class="nav-buttons">
       <a href="index.html">← Back to Chat</a>
       <a href="journal.html">📝 Journal</a>
@@ -34,6 +45,29 @@
   <script>
     let goodnightMode = false;
     let dreamPages = [];
+    let dreamToDelete = null;
+
+    function showDeleteModal(dreamId) {
+      dreamToDelete = dreamId;
+      document.getElementById('delete-modal').style.display = 'flex';
+    }
+    function hideDeleteModal() {
+      dreamToDelete = null;
+      document.getElementById('delete-modal').style.display = 'none';
+    }
+    document.addEventListener('DOMContentLoaded', function() {
+      document.getElementById('confirm-delete-btn').onclick = function() {
+        if (dreamToDelete !== null) {
+          dreamPages = dreamPages.filter(d => d.id !== dreamToDelete);
+          saveDreamPages();
+          renderDreamPages();
+        }
+        hideDeleteModal();
+      };
+      document.getElementById('cancel-delete-btn').onclick = function() {
+        hideDeleteModal();
+      };
+    });
 
     function addNewDream() {
       const newDream = {
@@ -80,11 +114,7 @@
     }
 
     function deleteDream(dreamId) {
-      if (confirm('Are you sure you want to delete this dream?')) {
-        dreamPages = dreamPages.filter(d => d.id !== dreamId);
-        saveDreamPages();
-        renderDreamPages();
-      }
+      showDeleteModal(dreamId);
     }
 
     function renderDreamPages() {
