--- a/client/journal.html
+++ b/client/journal.html
@@ -10,7 +10,7 @@
   <div class="app-container">
     <header>
       <h1>📝 Journal</h1>
-      <p>Write about your day</p>
+      <p>What's on your mind? Write away ☺️</p>
     </header>
 
     <main class="journal-container">
@@ -25,6 +25,17 @@
       </div>
     </main>
 
+    <!-- Custom Delete Confirmation Modal -->
+    <div id="delete-modal" class="delete-modal" style="display:none;">
+      <div class="delete-modal-content">
+        <p id="delete-modal-text">Are you sure you want to delete this entry?</p>
+        <div class="delete-modal-actions">
+          <button id="confirm-delete-btn" class="delete-confirm-btn">Delete</button>
+          <button id="cancel-delete-btn" class="delete-cancel-btn">Cancel</button>
+        </div>
+      </div>
+    </div>
+
     <nav class="nav-buttons">
       <a href="index.html">← Back to Chat</a>
       <a href="dreams.html">💤 Dream Log</a>
@@ -34,6 +45,29 @@
   <script>
     let goodnightMode = false;
     let journalPages = [];
+    let pageToDelete = null;
+
+    function showDeleteModal(pageId) {
+      pageToDelete = pageId;
+      document.getElementById('delete-modal').style.display = 'flex';
+    }
+    function hideDeleteModal() {
+      pageToDelete = null;
+      document.getElementById('delete-modal').style.display = 'none';
+    }
+    document.addEventListener('DOMContentLoaded', function() {
+      document.getElementById('confirm-delete-btn').onclick = function() {
+        if (pageToDelete !== null) {
+          journalPages = journalPages.filter(p => p.id !== pageToDelete);
+          saveJournalPages();
+          renderJournalPages();
+        }
+        hideDeleteModal();
+      };
+      document.getElementById('cancel-delete-btn').onclick = function() {
+        hideDeleteModal();
+      };
+    });
 
     function addNewPage() {
       const newPage = {
@@ -80,11 +114,7 @@
     }
 
     function deletePage(pageId) {
-      if (confirm('Are you sure you want to delete this entry?')) {
-        journalPages = journalPages.filter(p => p.id !== pageId);
-        saveJournalPages();
-        renderJournalPages();
-      }
+      showDeleteModal(pageId);
     }
 
     function renderJournalPages() {
