--- a/client/index.html
+++ b/client/index.html
@@ -6,29 +6,69 @@
   <title>PoppyNest</title>
   <link rel="stylesheet" href="style.css" />
 </head>
-<body>
+<body class="cyber-night">
   <div class="app-container">
     <header>
       <h1>🌸 PoppyNest 🌸</h1>
       <p>Your cozy bedtime companion🧸</p>
+      <div id="user-info" class="user-info" style="display: none;"></div>
     </header>
 
-    <main class="chat-container">
+    <!-- Login/Register Container -->
+    <div id="login-container" class="login-container" style="display: none;">
+      <div class="auth-box">
+        <h2>Welcome to PoppyNest 🌸</h2>
+        <p>Sign in to save your conversations</p>
+        
+        <!-- Login Form -->
+        <form id="login-form" class="auth-form">
+          <h3>Sign In</h3>
+          <input type="email" id="login-email" placeholder="Email" required />
+          <input type="password" id="login-password" placeholder="Password" required />
+          <button type="submit">Sign In</button>
+          <p class="auth-switch">Don't have an account? <a href="#" id="show-register">Sign Up</a></p>
+        </form>
+
+        <!-- Register Form -->
+        <form id="register-form" class="auth-form" style="display: none;">
+          <h3>Create Account</h3>
+          <input type="text" id="register-username" placeholder="Username" required />
+          <input type="email" id="register-email" placeholder="Email" required />
+          <input type="password" id="register-password" placeholder="Password" required />
+          <input type="password" id="register-confirm-password" placeholder="Confirm Password" required />
+          <button type="submit">Create Account</button>
+          <p class="auth-switch">Already have an account? <a href="#" id="show-login">Sign In</a></p>
+        </form>
+
+        <div id="auth-error" class="auth-error" style="display: none;"></div>
+      </div>
+    </div>
+
+    <!-- Chat Container -->
+    <main id="chat-container" class="chat-container" style="display: none;">
       <div id="chat-box" class="chat-box"></div>
 
       <form id="chat-form">
         <input type="text" id="user-input" placeholder="Share your thoughts..." required />
         <button type="submit">Send</button>
-        <button id="goodnight-toggle" class="goodnight-btn" onclick="toggleGoodnightMode()">🌙 Goodnight Mode</button>
+        <button id="goodnight-toggle" class="goodnight-btn" type="button">🌙 Goodnight Mode</button>
       </form>
+      <nav class="nav-buttons">
+        <a href="journal.html">📝 Journal</a>
+        <a href="dreams.html">💤 Dream Log</a>
+      </nav>
+      <button type="button" id="logout-btn" class="logout-btn" onclick="logout()">Logout</button>
     </main>
-
-    <nav class="nav-buttons">
-      <a href="journal.html">📝 Journal</a>
-      <a href="dreams.html">💤 Dream Log</a>
-    </nav>
   </div>
 
-  <script src="script.js"></script>
+  <!-- Firebase SDK -->
+  <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-app-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-auth-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore-compat.js"></script>
+  
+  <!-- App Scripts -->
+  <script type="module" src="firebase-config.js"></script>
+  <script type="module" src="auth-service.js"></script>
+  <script type="module" src="script.js"></script>
 </body>
 </html>
