making it a website instead, sizing it up and adding spinning stars and flowers backdrop

--- a/client/index.html
+++ b/client/index.html
@@ -7,6 +7,70 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body class="cyber-night">
+  <!-- Floating flower elements for dark mode -->
+  <div class="floating-emoji-1">🌸</div>
+  <div class="floating-emoji-2">🌸</div>
+  <div class="floating-emoji-3">🌸</div>
+  <div class="floating-emoji-4">🌸</div>
+  <div class="floating-emoji-5">🌸</div>
+  <div class="floating-emoji-6">🌸</div>
+  <div class="floating-emoji-7">🌸</div>
+  <div class="floating-emoji-8">🌸</div>
+  <div class="floating-emoji-9">🌸</div>
+  <div class="floating-emoji-10">🌸</div>
+  <div class="floating-emoji-11">🌸</div>
+  <div class="floating-emoji-12">🌸</div>
+  <div class="floating-emoji-13">🌸</div>
+  <div class="floating-emoji-14">🌸</div>
+  <div class="floating-emoji-15">🌸</div>
+  <div class="floating-emoji-16">🌸</div>
+  <div class="floating-emoji-17">🌸</div>
+  <div class="floating-emoji-18">🌸</div>
+  <div class="floating-emoji-19">🌸</div>
+  <div class="floating-emoji-20">🌸</div>
+  
+  <!-- Floating star elements for dark mode -->
+  <div class="floating-star-1">⭐</div>
+  <div class="floating-star-2">⭐</div>
+  <div class="floating-star-3">⭐</div>
+  <div class="floating-star-4">⭐</div>
+  <div class="floating-star-5">⭐</div>
+  <div class="floating-star-6">⭐</div>
+  <div class="floating-star-7">⭐</div>
+  <div class="floating-star-8">⭐</div>
+  <div class="floating-star-9">⭐</div>
+  <div class="floating-star-10">⭐</div>
+  <div class="floating-star-11">⭐</div>
+  <div class="floating-star-12">⭐</div>
+  <div class="floating-star-13">⭐</div>
+  <div class="floating-star-14">⭐</div>
+  <div class="floating-star-15">⭐</div>
+  <div class="floating-star-16">⭐</div>
+  <div class="floating-star-17">⭐</div>
+  <div class="floating-star-18">⭐</div>
+  <div class="floating-star-19">⭐</div>
+  <div class="floating-star-20">⭐</div>
+  <div class="floating-star-21">⭐</div>
+  <div class="floating-star-22">⭐</div>
+  <div class="floating-star-23">⭐</div>
+  <div class="floating-star-24">⭐</div>
+  <div class="floating-star-25">⭐</div>
+  <div class="floating-star-26">⭐</div>
+  <div class="floating-star-27">⭐</div>
+  <div class="floating-star-28">⭐</div>
+  <div class="floating-star-29">⭐</div>
+  <div class="floating-star-30">⭐</div>
+  <div class="floating-star-31">⭐</div>
+  <div class="floating-star-32">⭐</div>
+  <div class="floating-star-33">⭐</div>
+  <div class="floating-star-34">⭐</div>
+  <div class="floating-star-35">⭐</div>
+  <div class="floating-star-36">⭐</div>
+  <div class="floating-star-37">⭐</div>
+  <div class="floating-star-38">⭐</div>
+  <div class="floating-star-39">⭐</div>
+  <div class="floating-star-40">⭐</div>
+  
   <div class="app-container">
     <header>
       <h1>🌸 PoppyNest 🌸</h1>
@@ -47,7 +111,7 @@
     <!-- Chat Container -->
     <main id="chat-container" class="chat-container" style="display: none;">
       <div id="chat-box" class="chat-box"></div>
-
+      <button id="scroll-bottom-btn" class="scroll-bottom-btn" style="display: none;">▼ New Messages</button>
       <form id="chat-form">
         <input type="text" id="user-input" placeholder="Share your thoughts..." required />
         <button type="submit">Send</button>
