add drawing feature

--- a/client/index.html
+++ b/client/index.html
@@ -119,10 +119,17 @@
       </form>
       <nav class="nav-buttons">
         <a href="journal.html">📝 Journal</a>
+        <a href="draw.html">🎨 Draw</a>
         <a href="dreams.html">💤 Dream Log</a>
       </nav>
       <button type="button" id="logout-btn" class="logout-btn" onclick="logout()">Logout</button>
     </main>
+    
+    <footer class="app-footer">
+      <div class="footer-content">
+        <p>Made with 💖 for dreamy conversations</p>
+      </div>
+    </footer>
   </div>
 
   <!-- Firebase SDK -->
