final changes for now

--- a/client/dreams.html
+++ b/client/dreams.html
@@ -136,7 +136,7 @@
     function addNewDream() {
       const newDream = {
         id: Date.now(),
-        date: new Date().toLocaleDateString(),
+        date: new Date().toLocaleString(),
         content: '',
         isEditing: true
       };
