making log in page better ui

--- a/client/index.html
+++ b/client/index.html
@@ -73,7 +73,19 @@
   
   <div class="app-container">
     <header>
-      <h1>🌸 PoppyNest 🌸</h1>
+      <h1 class="interactive-title">
+        <span class="emoji">🌸</span>
+        <span class="letter" data-letter="P">P</span>
+        <span class="letter" data-letter="o">o</span>
+        <span class="letter" data-letter="p">p</span>
+        <span class="letter" data-letter="p">p</span>
+        <span class="letter" data-letter="y">y</span>
+        <span class="letter" data-letter="N">N</span>
+        <span class="letter" data-letter="e">e</span>
+        <span class="letter" data-letter="s">s</span>
+        <span class="letter" data-letter="t">t</span>
+        <span class="emoji">🌸</span>
+      </h1>
       <p>Your cozy bedtime companion🧸</p>
       <div id="user-info" class="user-info" style="display: none;"></div>
     </header>
