--- a/client/index.html
+++ b/client/index.html
@@ -7,6 +7,17 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body class="cyber-night">
+  <!-- Nightlamp -->
+  <div class="nightlamp" id="nightlamp">
+    <div class="nightlamp-base"></div>
+    <div class="nightlamp-stand"></div>
+    <div class="nightlamp-shade"></div>
+    <div class="nightlamp-bulb"></div>
+  </div>
+  
+  <!-- Light overlay -->
+  <div class="light-overlay" id="lightOverlay"></div>
+  
   <!-- Floating flower elements for dark mode -->
   <div class="floating-emoji-1">🌸</div>
   <div class="floating-emoji-2">🌸</div>
